修改可执行文件的使用方式

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,6 @@ FIND_PACKAGE( OpenCV REQUIRED )
 ADD_LIBRARY( getConfig getConfig.cpp )
 TARGET_LINK_LIBRARIES( getConfig  ${OpenCV_LIBS} )
 
-# 增加一个可执行的二进制
-ADD_EXECUTABLE( main main.cpp )
-TARGET_LINK_LIBRARIES( main getConfig ${OpenCV_LIBS} )
+# 增加一个可执行的二进制sudoku_recgnize,并链接对应的库
+ADD_EXECUTABLE( sudoku_recgnize main.cpp )
+TARGET_LINK_LIBRARIES( sudoku_recgnize getConfig ${OpenCV_LIBS} )
